# simple-nerf-rust

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  rustfmt.toml
artifacts/experiment/: evaluation-output.json  experiment.json  volume-renderer.mpk
examples/: experiment.rs  progress-kdam.rs  progress.rs
resources/lego-tiny/: RETRIEVAL_URL
src/: dataset.rs  encoder.rs  lib.rs  metric.rs  renderer.rs  scene.rs  trainer.rs
src/dataset/: mod.rs
src/encoder/: mod.rs
src/experiment/: mod.rs  tester.rs  trainer.rs
src/metric/: mod.rs
src/positional_encoder/: mod.rs
src/renderer/: mod.rs
src/scene/: mod.rs
src/trainer/: mod.rs
src/volume_renderer/: mod.rs
src/volumetric_scene/: mod.rs
