[package]
authors = ["Asher Jingkong Chen"]
name = "simple-nerf"
publish = false

[lib]
name = "simple_nerf"
path = "src/lib.rs"

[dependencies]
anyhow = {version = "1.0.86"}
burn = {version = "0.13.2", features = ["fusion", "train", "wgpu"]}
image = {version = "0.25.1", default-features = false, features = ["png"]}
kdam = {version = "0.5.2", features = ["template", "unicode"]}
npyz = {version = "0.8.3"}
regex = {version = "1.10.5"}
reqwest = {version = "0.12.5", features = ["blocking"]}
zip = {version = "2.1.3", default-features = false, features = ["deflate", "zstd"]}
