[package]
authors = ["Asher Jingkong Chen"]
description = "A simple implementation of NeRF in Rust"
license-file = "LICENSE"
name = "simple-nerf"
publish = false
repository = "https://github.com/AsherJingkongChen/simple-nerf-rust"

[lib]
name = "simple_nerf"
path = "src/lib.rs"

[dependencies]
anyhow = {version = "1.0.86"}
burn = {git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["fusion", "train", "wgpu"]}
image = {version = "0.25.1", default-features = false, features = ["png"]}
kdam = {version = "0.5.2", features = ["template", "unicode"]}
npyz = {version = "0.8.3"}
regex = {version = "1.10.5"}
reqwest = {version = "0.12.5", features = ["blocking"]}
zip = {version = "2.1.3", default-features = false, features = ["deflate", "zstd"]}

[profile.release]
lto = true
strip = true
